# bytez

./: README.md  challenge.md  prompt.md  pyproject.toml
bytez_challenge/: api.py  main.py
paper_analyzer/: analyzer.py  api.py  chunking.py  models.py
