
[tool.poetry]
name = "bytez-challenge"
version = "0.1.0"
description = "Development challenge for Bytez"
authors = ["Philip Ganchev <phil.ganchev@mail.com>"]
readme = "README.md"
packages = [{include = "bytez_challenge"}]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
pypdf2 = "^3.0.1"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = "^2.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
httpx = "^0.23.0"

[tool.uvicorn]
app = "bytez_challenge.api:app"
host = "0.0.0.0"
reload = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
