
[tool.poetry]
name = "bytez-tech-assessment"
version = "0.2.0"
description = "Technical assessment for Bytez.com"
authors = ["Philip Ganchev <phil.ganchev@mail.com>"]
readme = "README.md"
packages = [{include = "paper_analyzer"}]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = "^2.11.2"
python-multipart = "^0.0.20"
pymupdf = "^1.25.5"
openai = "^1.70.0"
tiktoken = "^0.9.0"

[tool.uvicorn]
app = "paper_analyzer.api:app"
host = "0.0.0.0"
reload = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyze = "paper_analyzer.analyzer:analyze"
